Created StockItem class

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ setenv =
     PYTHONDONTWRITEBYTECODE=1
 skip_install = true
 commands =
-    {posargs: flake8 .}
+    {posargs:flake8 .}
 
 ################################################################################
 # The following sections actually provide settings for various tools
@@ -38,7 +38,7 @@ commands =
 [coverage:run]
 branch = True
 source =
-    auth_enhanced
+    stockings
     tests
 omit =
     */__init__.py
