Provide black config in a tox environment

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,18 @@ skip_install = true
 commands =
     {posargs:flake8 .}
 
+[testenv:black]
+basepython = {[testenv:util]basepython}
+deps = {[testenv:util]deps}
+envdir = {[testenv:util]envdir}
+setenv = {[testenv:util]setenv}
+skip_install = {[testenv:util]skip_install}
+commands =
+    black . \
+        --skip-string-normalization \
+        --exclude /(stockings\/migrations)/ \
+        {posargs}
+
 ################################################################################
 # The following sections actually provide settings for various tools
 ################################################################################
@@ -64,6 +76,7 @@ exclude =
 
 # as per Django's Coding Style
 # see https://docs.djangoproject.com/en/dev/internals/contributing/writing-code/coding-style/
+# When using 'black', max line length will be capped at 88.
 max-line-length = 119
 
 ignore =
