Set up testing infrastructure

--- a/tox.ini
+++ b/tox.ini
@@ -56,6 +56,16 @@ commands =
         --exclude /(stockings\/migrations)/ \
         {posargs}
 
+[testenv:testing]
+basepython = {[testenv:django]basepython}
+deps =
+    {[testenv:django]deps}
+    coverage
+envdir = {toxworkdir}/testing
+setenv = {[testenv:django]setenv}
+skip_install = {[testenv:django]skip_install}
+commands = coverage run --parallel tests/runtests.py {posargs}
+
 ################################################################################
 # The following sections actually provide settings for various tools
 ################################################################################
