Added pre-commit to the toolset

--- a/tox.ini
+++ b/tox.ini
@@ -37,6 +37,7 @@ deps =
     flake8
     flake8-isort
     isort
+    pre-commit
 envdir = {toxworkdir}/util
 setenv =
     PYTHONDONTWRITEBYTECODE=1
