Add pre-commit hook for flake8 (and plugins)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,12 @@ repos:
     rev: stable
     hooks:
      - id: black
+  # flake8 (checks Python source files for compliance with PEP8)
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: 3.7.9
+    hooks:
+     - id: flake8
+       additional_dependencies: [flake8-bugbear, flake8-docstrings]
   # pre-commit (various hooks)
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.5.0
