--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,14 @@ default_language_version:
 minimum_pre_commit_version: '1.14.0'
 
 repos:
+  - repo: local
+    hooks:
+     - id: tests
+       name: run unittests
+       entry: make test
+       language: system
+       types: [python]
+       stages: [push]
   # black (formats Python source files without any configuration)
   - repo: https://github.com/psf/black
     rev: stable
