--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 default_language_version:
     python: python3.7
 
-# exclude:
+exclude: '^.*/migrations/.*$'
 
 minimum_pre_commit_version: '1.14.0'
 
