Removed utility tools from tox environment and rely on pre-commit
- bandit
- black
- flake8
- isort

--- a/tox.ini
+++ b/tox.ini
@@ -32,30 +32,14 @@ commands =
 [testenv:util]
 basepython = python3
 deps =
-    black
     coverage
-    flake8
-    flake8-isort
-    isort
     pre-commit
 envdir = {toxworkdir}/util
 setenv =
     PYTHONDONTWRITEBYTECODE=1
 skip_install = true
 commands =
-    {posargs:flake8 .}
-
-[testenv:black]
-basepython = {[testenv:util]basepython}
-deps = {[testenv:util]deps}
-envdir = {[testenv:util]envdir}
-setenv = {[testenv:util]setenv}
-skip_install = {[testenv:util]skip_install}
-commands =
-    black . \
-        --skip-string-normalization \
-        --exclude /(stockings\/migrations)/ \
-        {posargs}
+    {posargs:pre-commit run}
 
 [testenv:testing]
 basepython = {[testenv:django]basepython}
