--- a/tox.ini
+++ b/tox.ini
@@ -64,7 +64,7 @@ source =
 omit =
     */__init__.py
     */migrations/*
-    */tests/utils/*
+    */tests/util/*
     */tests/runtests.py
 
 # This sections sets the options for coverage reporting
