Implemented apply_trade() as a instance method

--- a/tox.ini
+++ b/tox.ini
@@ -90,6 +90,7 @@ max-line-length = 119
 ignore =
     # as per Django's Coding Style
     W601,
+    W503,  # line break before binary operator
     D,
 
 
