Make Sphinx work

--- a/tox.ini
+++ b/tox.ini
@@ -41,6 +41,26 @@ skip_install = true
 commands =
     {posargs:pre-commit run}
 
+[testenv:sphinx]
+basepython = {[testenv:util]basepython}
+changedir = {toxinidir}/docs
+deps = Sphinx
+envdir = {toxworkdir}/sphinx
+skip_install = true
+whitelist_externals =
+    make
+commands =
+    {posargs:make html}
+
+[testenv:sphinx-srv]
+basepython = {[testenv:sphinx]basepython}
+changedir = {toxinidir}/docs/build/html
+deps = {[testenv:sphinx]deps}
+envdir = {[testenv:sphinx]envdir}
+skip_install = {[testenv:sphinx]skip_install}
+commands =
+    python -m http.server {posargs:8082}
+
 [testenv:testing]
 basepython = {[testenv:django]basepython}
 deps =
@@ -79,6 +99,7 @@ fail_under = 95
 exclude =
     .git,
     .tox,
+    docs/source/conf.py,
     migrations,
     settings_dev.py,
 
@@ -91,7 +112,6 @@ ignore =
     # as per Django's Coding Style
     W601,
     W503,  # line break before binary operator
-    D,
 
 
 # This section actually sets the options for isort
