Playing around with autodoc

--- a/tox.ini
+++ b/tox.ini
@@ -44,8 +44,13 @@ commands =
 [testenv:sphinx]
 basepython = {[testenv:util]basepython}
 changedir = {toxinidir}/docs
-deps = Sphinx
+deps =
+    django
+    sphinx
+    sphinxcontrib-django
 envdir = {toxworkdir}/sphinx
+setenv =
+    PYTHONDONTWRITEBYTECODE=1
 skip_install = true
 whitelist_externals =
     make
@@ -57,6 +62,7 @@ basepython = {[testenv:sphinx]basepython}
 changedir = {toxinidir}/docs/build/html
 deps = {[testenv:sphinx]deps}
 envdir = {[testenv:sphinx]envdir}
+setenv = {[testenv:sphinx]setenv}
 skip_install = {[testenv:sphinx]skip_install}
 commands =
     python -m http.server {posargs:8082}
