Finished documentation of StockingsMoney

--- a/tox.ini
+++ b/tox.ini
@@ -47,7 +47,8 @@ changedir = {toxinidir}/docs
 deps =
     django
     sphinx
-    sphinxcontrib-django
+    # sphinxcontrib-django
+    sphinx_rtd_theme
 envdir = {toxworkdir}/sphinx
 setenv =
     PYTHONDONTWRITEBYTECODE=1
