Reconfigured Sphinx completely

--- a/tox.ini
+++ b/tox.ini
@@ -45,10 +45,7 @@ commands =
 basepython = {[testenv:util]basepython}
 changedir = {toxinidir}/docs
 deps =
-    django
-    sphinx
-    # sphinxcontrib-django
-    sphinx_rtd_theme
+    -r {toxinidir}/requirements/documentation.txt
 envdir = {toxworkdir}/sphinx
 setenv =
     PYTHONDONTWRITEBYTECODE=1
