Provided tox configuration

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,20 @@
 [tox]
 envlist =
-    util
+    py35-django22
+    py{36,37,38}-django{22,30}
 
 skipsdist = true
 skip_missing_interpreters = true
+
+[testenv]
+setenv =
+    PYTHONDONTWRITEBYTECODE=1
+deps =
+    coverage
+    django22: Django>2.2, <3.0
+    django30: Django>3.0, <3.1
+commands =
+    coverage run --parallel tests/runtests.py -v 0
 
 [testenv:django]
 basepython = python3
