Added tests for templatetag money
The isort configuration was modified (in tox.ini) to match black's coding style

--- a/tox.ini
+++ b/tox.ini
@@ -130,13 +130,16 @@ ignore =
 
 # This section actually sets the options for isort
 [isort]
-# these settings are taken from Django's isort configuration
-# see https://github.com/django/django/blob/2.0.2/setup.cfg
+# these settings are taken from Django's isort configuration (see
+# https://github.com/django/django/blob/2.0.2/setup.cfg) and adapted to be fully
+# compatible with black
 combine_as_imports = True
 default_section = THIRDPARTY
 include_trailing_comma = True
-line_length = 79
-multi_line_output = 5
+line_length = 88
+force_grid_wrap = True
+multi_line_output = 3
+use_parantheses = True
 not_skip = __init__.py
 
 # project specific isort options
