Fixed tox setup
To fix the tox setup, test settings are separated from development settings.
This separation is then also applied to requirements, splitting the (minimal)
production requirements from the development requirements.

To actually make tox work this way, constraint files were created to fix the
Django versions based on the testenv.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{36,37,38}-django{22,30}
+    py{36,37,38}-django{22,30,31}
 
 skipsdist = true
 skip_missing_interpreters = true
@@ -10,8 +10,10 @@ setenv =
     PYTHONDONTWRITEBYTECODE=1
 deps =
     coverage
-    django22: Django>2.2, <3.0
-    django30: Django>3.0, <3.1
+    -r {toxinidir}/requirements/production.txt
+    django22: -c {toxinidir}/requirements/_constraints/django22.txt
+    django30: -c {toxinidir}/requirements/_constraints/django30.txt
+    django31: -c {toxinidir}/requirements/_constraints/django31.txt
 commands =
     coverage run --parallel tests/runtests.py -v 0
 
